# learning_cpp

./: .emacs  .gitignore  README.md
3DEngine/: 3DEngine.sln
3DEngine/olcEngine3D/: olcEngine3D.cpp  olcEngine3D.vcxproj
3dGraphicsEngine/: 3dGraphicsEngine.sln
3dGraphicsEngine/3dGraphicsEngine/: 3dGraphicsEngine.vcxproj  main.cpp
ARTxTImageReading/ARTxT/: ARTxT.vcxproj  FilesFilter.cpp  FilesFilter.h  blob.cpp  bloblist.cpp  hashtable.cpp  llahparam.h  main.cpp  main2MultipleFiles.cpp  window.cpp
BeginningCppGameProg/Timber/: Makefile
Chapter02/: exercising_operators.cpp  finding_bathroom.cpp  finding_school.cpp  hello_world.cpp  name_and_age.cpp
Chapter03/: basic_calculations.cpp  coins.cpp  exercising_operators.cpp  goodbye_cruel_world.cpp  miles_to_kilometers.cpp  name_and_age.cpp  numerical_sequence.cpp  odd_even_tester.cpp  operation_recognizer.cpp  repeated_word_detection.cpp  simple_form_letter.cpp  spelled_numbers_to_ints.cpp  string_sequence.cpp  unsafe_conversions.cpp
Chapter04/: cities_distances.cpp  currency_converter.cpp  currency_converter_switch_version.cpp  number_cruncher.cpp  numbers_guessing_game.cpp  print_alphabet.cpp  print_alphabet_upper_letters_digits.cpp  print_median.cpp  square_without_multiplication.cpp  words_bleeping.cpp
ChemicalPrinciples/: ChemicalPrinciples.sln
ChemicalPrinciples/Fundamentals.EAA1/: Fundamentals.EAA1.vcxproj
ChemicalPrinciples/Fundamentals.EGA1/: Fundamentals.EGA1.vcxproj
ChemicalPrinciples/Fundamentals.Eg1/: Fundamentals.Eg1.vcxproj
ChemicalPrinciples/Fundamentals.ExampleA1.Tests/: Fundamentals.ExampleA1.Tests.vcxproj
ConsoleApplication1/Tanks.GameApp.Client/: Client.cpp  Tanks.GameApp.Client.vcxproj.filters
ConsoleApplication1/Tanks.GameEngine.Implementations/: CustomizedPixelGameEngine.cpp  CustomizedPixelGameEngine.h
ConsoleApplication1/Tanks.GameEngine.Interfaces/: Tanks.GameEngine.Interfaces.vcxproj
ConsoleApplication1/Tanks.GraphicsEngine.Implementations/: Tanks.GraphicsEngine.Implementations.vcxproj  Tanks.GraphicsEngine.Implementations.vcxproj.filters
ConsoleTetris/ConsoleTetris/: ConsoleTetris.cpp  ConsoleTetris.vcxproj
CppTddBookExamples/SoundexTests/: test.cpp
Creating_3D-Games/PacMan/: PacMan.sln
Creating_3D-Games/Pong/: Game.cpp  Game.h  Pong.sln  Pong.vcxproj
DesignPatterns/: DesignPatterns.sln
DesignPatterns/Observer/: boost_x64_release.props  observer.cpp
Graphics3DEngine/: main.cpp  olcPixelGameEngine.h
Graphics3dEngine/Graphics3dEngine/: main.cpp
LearnOpenGL/: BreakoutGame.vcxproj  LearnOpenGL.sln  game.cpp
LearningCPP/: LearningCPP.VC.db  LearningCPP.sln
LearningCPP/LearningCPP/: LearningCPP.vcxproj  LearningCPP.vcxproj.filters  ReadMe.txt  numbers_guessing_game.cpp  stdafx.cpp
LittleVulkanEngine/LittleVulkanEngine/: LittleVulkanEngine.sln
PixelEnginePlayground/: PixelEnginePlayground.cpp  PixelEnginePlayground.sln  PixelEnginePlayground.vcxproj  PixelEnginePlayground.vcxproj.filters
PixelEnginePlayground/PixelEnginePlayground/: PixelEnginePlayground.cpp  PixelEnginePlayground.vcxproj  PixelEnginePlayground.vcxproj.filters  Tank.cpp  Tank.h
PixelEnginePlayground/Tanks/: EntitiesRenderer.cpp  EntitiesRenderer.h  Game.cpp  Game.h  RenderEngine.cpp  RenderEngine.h  SpriteAnimation.h  Tank.cpp  Tank.h  Tanks.vcxproj  Tanks.vcxproj.filters  main.cpp
PixelEnginePlayground/Tanks2/: ClientApp.cpp  Game.cpp  Game.h  Matrix2D.cpp  Matrix2D.h  Pixel.cpp  Pixel.h  PixelEngine.cpp  PixelEngine.h  Tank.cpp  Tank.h  Tanks2.vcxproj  Tanks2.vcxproj.filters
PixelEnginePlayground/Tanks3/: ClientApp.cpp  PixelEngine.h  Tank.h  Tanks3.vcxproj  Tanks3.vcxproj.filters
PixelEnginePlayground/Tanks4/: ClientApp.cpp  PixelEngine.h  Tanks4.vcxproj
SmartPointersExample/: Person.cpp  SmartPointersExample.vcxproj.filters
SnakesAndLaddersCppTdd/: SnakesAndLaddersCppTdd.sln
SnakesAndLaddersCppTdd/SnakesAndLaddersCppTdd.ConsoleClient/: SnakesAndLaddersCppTdd.ConsoleClient.cpp  SnakesAndLaddersCppTdd.ConsoleClient.vcxproj  SnakesAndLaddersCppTdd.ConsoleClient.vcxproj.filters
SnakesAndLaddersCppTdd/SnakesAndLaddersCppTdd.UnitTests/: SnakesAndLaddersCppTdd.UnitTests.cpp  SnakesAndLaddersCppTdd.UnitTests.vcxproj  SnakesAndLaddersCppTdd.UnitTests.vcxproj.filters
Tanks/: Tanks.sln
Tanks/Tanks.GameApp.Client/: Client.cpp  (+11 more)
TanksCppTdd.UnitTests/: TanksCppTdd.UnitTests.sln
TanksOld2/: Tanks.sln
Tetris/: message.h
Timber/: Timber.cpp  Timber.sln  Timber.vcxproj
VulkanTutorial/: VulkanTutorial.sln
VulkanTutorialCopy/: VulkanTutorial.sln
WordsDetector/: Readme.md  WordsDetector.sln
YoutubeOpenGL/: BreakoutGame.filters  BreakoutGame.sln  YoutubeOpenGL.sln  YoutubeOpenGL.vcxproj  glad.c  main.cpp  resource_manager.cpp  resource_manager.h
chatExampleWithSockets/: server.cpp
learning_cpp/: learning_cpp.sln
prog_principles_and_practice/: .gitignore  prog_principles_and_practice.sln
prog_principles_and_practice/ch2_dr1_user_input_based_letter/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch2_ex10_operands/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch2_ex2_mi_km_converter/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch2_ex3_legal_and_illegal_names/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch2_ex7_string_sorter/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch2_ex8_odd_or_even/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch2_ex9_text_to_digit/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch3_dr4_language_features/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch3_tt1_currency_converter/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch3_tt2_currency_converter_switch/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch3_tt3_while/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch3_tt5_square/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch3_tt6_words_bleeping/: CMakeLists.txt  main.cpp
prog_principles_and_practice/ch5_dr6/: CMakeLists.txt
prog_principles_and_practice_2/: prog_principles_and_practice.sln
tanks/: tanks.sln
(+773 files in other folders)
